--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -85,6 +85,10 @@ android {
         versionCode 1
         versionName "1.0"
     }
+    compileOptions {
+       sourceCompatibility JavaVersion.VERSION_11
+       targetCompatibility JavaVersion.VERSION_11
+    }
     signingConfigs {
         debug {
             storeFile file('debug.keystore')
@@ -117,3 +121,5 @@ dependencies {
         implementation jscFlavor
     }
 }
+
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
